--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -4,5 +4,5 @@ layout: default
 
 <h1>Resume</h1>
 
-Click <a href="https://drive.google.com/file/d/1WVP68eZAqEL27jb4q6NprqHTaSXWlafu/view?usp=sharing" target="_blank">here</a> to view my resume (Google drive link)
+Click <a href="https://drive.google.com/file/d/1k3gL7Dp7qevJmhxdz3bvNXsuIqbExg3M/view?usp=drive_link" target="_blank">here</a> to view my resume (Google drive link)
 
