--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -4,5 +4,10 @@ layout: default
 
 <h1>Resume</h1>
 
-Click <a href="https://drive.google.com/file/d/1QdoFjYUvFTs3Xh6Sz3cZsMHQhnSzBoZ0/view?usp=sharing" target="_blank">here</a> to view my resume (Google drive link)
-
+Click
+<a
+  href="https://drive.google.com/file/d/1jUX3vFfQL63aLVJAgSR421Qenv7mJp2T/view?usp=drive_link"
+  target="_blank"
+  >here</a
+>
+to view my resume (Google drive link)
