--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,7 +6,7 @@ layout: default
 
 Click
 <a
-  href="https://drive.google.com/file/d/1jUX3vFfQL63aLVJAgSR421Qenv7mJp2T/view?usp=drive_link"
+  href="https://drive.google.com/file/d/1NnEdpify5NHrv08fKZnIGPtCtXlZqRFD/view?usp=sharing"
   target="_blank"
   >here</a
 >
